# pstock

./: README.md  package.json  todo.md  tsconfig.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: cn_stock_calendar.sql  sqlite.db
src-tauri/src/: error.rs  lib.rs  main.rs  task.rs  utils.rs
src-tauri/src/command/: backtest.rs  global.rs  mod.rs  stock_calendar.rs  stock_kline.rs  stock_list.rs
src-tauri/src/crawl/: est_zh_stock_a_basic.rs  est_zh_stock_a_hist.rs  est_zh_stock_a_trends.rs  mod.rs
src-tauri/src/database/: crawl_log_mapper.rs  indicator_mapper.rs  migrations.rs  mod.rs  stock_mapper.rs  test.rs
src-tauri/src/indicator/: kline_pattern.rs  mod.rs  test.rs
src-tauri/src/model/: app_state.rs  mod.rs  payload.rs  stock.rs
src/components/: generatedMockDataList.ts  klinechart.css  klinechart.tsx  mysider.tsx  rt-klinechart.tsx  stock_search.tsx  stocktable.tsx  top5card.tsx
src/demo/: App.css  App.tsx
src/model/: payload.ts  stock.ts
src/util/: utils.ts
