[package]
name = "mystock"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mystock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = {version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["stream"] }
reqwest-eventsource = "0.6"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls" , "chrono", 'sqlite' ] }
tokio = { version = "1", features = ["full"] }
thiserror="*"
anyhow="*"
tokio-stream = "0.1.17"
log="0.4"
tauri-plugin-log = "2.2.0"
tauri-plugin-shell = "2.2.0"

polars={version = "0.45", features = ["parquet", "lazy", "round_series", "json"]}
itertools="*"

rust_ta-lib={path = "../rust_ta-lib", version = "0.6.4"}

